# MaidSafe

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CI.cmake.in  CMakeLists.txt  CONTRIBUTOR  CTestConfig.cmake  LICENSE  Project.xml  README  README.md  _Sidebar.md  clang_complete_template  maidsafe_log.ini  make_clang_complete.py  release_notes.txt
common/: CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt  README
common/maidsafe_common_lib/: CMakeLists.txt  MemCheck.supp
common/maidsafe_common_lib/src/maidsafe/common/: asio_service.h  omp.h  return_codes.h  test.h
common/src/maidsafe/common/: asio_service.cc  breakpad.h  breakpad.xx  crypto.cc  crypto.h  log.cc  log.h  platform_config.h  rsa.cc  rsa.h  safe_encrypt.proto  safe_encrypt_pb.h  utils.cc  utils.h  version.h
common/src/maidsafe/common/tests/: c++0x_test.xx  detect_platform_test.cc  main.cc  rsa_test.cc
examples/dummy/: CMakeLists.txt  LICENSE
examples/dummy/src/: main.cc
examples/qt_dummy/: CMakeLists.txt
examples/qt_dummy/src/: main.cc  qt_pop_headers.h  qt_push_headers.h
examples/qt_dummy/src/controllers/: mainwindow.cc  mainwindow.h
examples/qt_dummy/src/resources/: resources.qrc
examples/qt_dummy/src/resources/styles/: common.qss
examples/qt_dummy/src/widgets/: mainwindow.ui
examples/surefile/: CMakeLists.txt
examples/surefile/include/maidsafe/surefile/: config.h  error.h  surefile.h  surefile_api.h
examples/surefile/src/maidsafe/surefile/: error.cc  error_categories.cc  error_categories.h  surefile.cc  surefile.proto  surefile_api.cc  surefile_demo.cc  surefile_impl.cc  surefile_impl.h
private/: CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt
private/src/maidsafe/private/: log.h  return_codes.h  version.h
private/src/maidsafe/private/chunk_actions/: appendable_by_all.proto  appendable_by_all_pb.h  appendable_by_all_rules.cc  chunk.proto  chunk_pb.h  (+12 more)
routing/: CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt  MemCheck.supp  README
routing/src/maidsafe/routing/: bootstrap_file_handler.cc  bootstrap_file_handler.h  cache_manager.cc  cache_manager.h  error.h  error.xx  log.h  message_handler.cc  message_handler.h  node_id.cc  node_id.h  parameters.cc  parameters.h  response_handler.cc  response_handler.h  return_codes.h  routing.proto  routing_api.cc  routing_api.h  routing_api_impl.cc  routing_api_impl.h  routing_pb.h  routing_table.cc  routing_table.h  rpcs.cc  rpcs.h  service.cc  service.h  timer.cc  timer.h  utils.cc  utils.h  version.h
rudp/: CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt
rudp/src/maidsafe/rudp/: common.h  connection.cc  connection.h  log.h  managed_connections.cc  managed_connections.h  parameters.cc  parameters.h  return_codes.h  transport.cc  transport.h  utils.cc  utils.h  version.h
src/third_party_libs/: CMakeLists.txt  catch.patch
src/third_party_libs/boost/: CMakeLists.txt
src/third_party_libs/boost/boost/: process.hpp
src/third_party_libs/boost/libs/: CMakeLists.txt
src/third_party_libs/boost/tools/: CMakeLists.txt
src/third_party_libs/boost_1_54_0/: README.txt  boost_variant_detail_move_patched.hpp
src/third_party_libs/boost_1_54_0_beta1/: README.txt
src/third_party_libs/cereal/: CMakeLists.txt
src/third_party_libs/cryptopp/: CMakeLists.txt  GNUmakefile  aes.h  asn.h  base32.cpp  base64.cpp  basecode.cpp  cpu.cpp  cpu.h  cryptlib.cpp  datatest.cpp  dirtyHackForGcc49.h  ecp.cpp  fltrimpl.h  gcm.cpp  hex.cpp  misc.h  nbtheory.cpp  network.h  regtest.cpp  rijndael.cpp  seckey.h  simple.h  validat1.cpp  wait.h  wake.cpp  zdeflate.cpp  zinflate.cpp
src/third_party_libs/glog/: CMakeLists.txt
src/third_party_libs/glog/src/: CMakeLists.txt  logging.cc  raw_logging.cc  symbolize.cc  utilities.cc  utilities.h  vlog_is_on.cc
src/third_party_libs/google-breakpad/: CMakeLists.txt
src/third_party_libs/googlemock/: CMakeLists.txt
src/third_party_libs/googlemock/gtest/: CMakeLists.txt
src/third_party_libs/googlemock/src/: gmock_main.cc
src/third_party_libs/googlemock/test/: gmock-actions_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h
src/third_party_libs/header_only/: CMakeLists.txt
src/third_party_libs/header_only/asio/: error.hpp
src/third_party_libs/header_only/eggs/: variant.hpp
src/third_party_libs/leveldb/: CMakeLists.txt  New Text Document.txt
src/third_party_libs/leveldb/db/: c.cc  db_bench.cc  db_iter.cc  version_set.cc
src/third_party_libs/leveldb/issues/: issue178_test.cc
src/third_party_libs/leveldb/port/: port.h  port_posix.h  port_win.cc  port_win.h
src/third_party_libs/leveldb/table/: block_builder.cc
src/third_party_libs/leveldb/util/: comparator.cc  env_boost.cc  env_win.cc  win_logger.cc  win_logger.h
src/third_party_libs/leveldb/win32/: env_win32.cc  port_win32.cc  port_win32.h
src/third_party_libs/patches/catch/: catch.patch
src/third_party_libs/patches/googlemock/: freebsd_support.patch
src/third_party_libs/patches/sfml_2_1/: Macros.cmake
src/third_party_libs/protobuf/: CMakeLists.txt  configure_cli_unittest.cmake  files.cmake
src/third_party_libs/snappy/: CMakeLists.txt
src/third_party_libs/sqlite/: CMakeLists.txt
src/third_party_libs/sqlite/src/: speedtest1.cc  sqlite_test.cc  wordcount.c
third_party_libs/: .gitignore  CMakeLists.txt
third_party_libs/cryptopp/: CMakeLists.txt
third_party_libs/glog/: CMakeLists.txt  google-glog.sln
third_party_libs/glog/src/: config.h.in  symbolize.cc  utilities.cc  utilities.h
third_party_libs/glog/src/glog/: logging.h.in
third_party_libs/glog/src/windows/: port.h
third_party_libs/protobuf/: CMakeLists.txt
third_party_libs/protobuf/vsprojects/: libprotobuf.vcxproj  protoc.vcxproj
third_party_libs/src/cryptopp/: CMakeLists.txt
third_party_libs/src/glog/src/: logging.cc
third_party_libs/src/protobuf/: CMakeLists.txt
third_party_libs/src/protobuf/vsprojects/: libprotoc.vcxproj  protobuf.sln
(+8010 files in other folders)
